// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerStatusBtn text correct with isCurrentUserActive = false 1`] = `
<button
  class="deactivatebtn btn btn-warning"
  data-cy="deactivate"
  data-testid="activatebtn-input"
  placeholder="De-Activate?"
  type="button"
>
  Re-Activate?
</button>
`;

exports[`PlayerStatusBtn text correct with isCurrentUserActive = true 1`] = `
<button
  class="deactivatebtn btn btn-success"
  data-cy="deactivate"
  data-testid="activatebtn-input"
  placeholder="De-Activate?"
  type="button"
>
  De-Activate?
</button>
`;
